[project]
name = "domb"
description = "DoMB Tools: Python Toolkit of Department of Molecular Biophysics"

version = "2023.11.03"  # year.month.version_in_month
authors = [{name = "Borys Olifirov", email = "omnia.fatum@gmail.com"}]

readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.8"

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-image",
    "scikit-learn",
    "scikit-posthocs",
    "scipy"
]

# dependencies = [
#     "autograd >= 1.6",
#     "ipykernel >= 6.19",
#     "jupyter >= 1.0",
#     "matplotlib >= 3.7",
#     "mkdocstrings[python] >= 0.18",
#     "numpy >= 1.25",
#     "pandas >= 1.5",
#     "pathos >= 0.3",
#     "scikit-image >= 0.19",
#     "scikit-learn >= 1.0",
#     "scikit-posthocs >= 0.7",
#     "scipy >= 0.12"
# ]

classifiers=[
    'Development Status :: 3 - Alpha',  # 4 - Beta, 5 - Production/Stable
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Operating System :: OS Independent',

    'Framework :: IPython',
    'Framework :: Jupyter',

    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Topic :: Utilities'
]


[project.urls]
Documentation = "https://domb.bio/"
Repository = "https://github.com/wisstock/DoMB_tools"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"